Add subpage with lists and allow creating new lists

--- a/src/components/ListForm/ListForm.module.scss
+++ b/src/components/ListForm/ListForm.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/settings.scss';
 
-.columnForm {
+.listForm {
     display: flex;
     justify-content: center;
     margin: ($base-size * 3);
