--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -3,6 +3,7 @@ $color-dark: #2f3542;
 $color-darker: darken($color-dark, 3%);
 $color-success: #26de81;
 $color-warning: #e1644e;
+$color-favorite: #dbac2a;
 
 $font-text: 'Poppins', sans-serif;
 
